FUS-5426 Use case that reproduces the issue